--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-30 21:18:18
+lastsearch = 2024-07-31 00:36:38
 
 [www.instagram.com]
 match = -173.3%%
@@ -37,9 +37,9 @@ title = Dr CHAN Hoi Huen
 url = https://www.eduhk.hk/ses/web_uat/staff_detail.php?id=60&name=chanhh
 
 [en.wikipedia.org]
-match = 6.7%%
-title = Cantonese profanity
-url = https://en.wikipedia.org/wiki/Cantonese_profanity
+match = 0.0%%
+title = Bong Joon-ho
+url = https://en.wikipedia.org/wiki/Bong_Joon-ho
 
 [www.soc.cuhk.edu.hk]
 match = 50.0%%
