--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-07-30 22:53:22
+lastsearch = 2024-07-31 00:34:55
 
 [www.diepxuan.com]
-match = -13.3%%
-title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+match = -20.0%%
+title = Chiếu cây HT 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOoo_cKHfVRVDJ1QVW5ayfD8oOk7lmiWubgh0OangHt4aiSHPA4nj
 
 [www.htlight.vn]
 match = -26.7%%
@@ -17,9 +17,9 @@ title = Đèn chiếu cỏ CD-15W - HTLIGHT
 url = https://www.htlight.vn/den-chieu-co-cd-15w-1.html
 
 [shopee.vn]
-match = -40.0%%
-title = chiếu trúc tăm HT cao cấp 2mx2.2m
-url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [daros.com.vn]
 match = -40.0%%
