--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-30 23:44:40
+lastsearch = 2024-07-31 00:35:58
 
 [www.diepxuan.com]
 match = 40.9%%
 title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOoq_4ETedeIjNUBz1pyDQvXS1q8k4odzbpQeXrY650K58NenScTv
 
 [tiki.vn]
 match = -36.4%%
@@ -19,7 +19,7 @@ url = https://tiki.vn/search?q=thảm trải giường
 [www.lazada.vn]
 match = -86.4%%
 title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
+url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/?srsltid=AfmBOoqUUZrZi-fZ2JJm0IziVTqTJ5NJDFfJKRpVuOQ0zl1_EMYarHkG
 
 [flexhouse.vn]
 match = -50.0%%
@@ -49,7 +49,7 @@ url = https://blanc.vn/tham-trai-san
 [demxanh.com]
 match = -27.3%%
 title = Giường sắt Duy Phương cao cấp bọc da
-url = https://demxanh.com/giuong-sat-duy-phuong-cao-cap-boc-da.html
+url = https://demxanh.com/giuong-sat-duy-phuong-cao-cap-boc-da.html?srsltid=AfmBOooreE2-G1-jmPyprK6ywTFnlpHamfqiH_z0wiLAafcSh08gx6P_
 
 [www.kymdan.com]
 match = -18.2%%
