--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-30 23:50:43
+lastsearch = 2024-07-31 00:45:10
 
 [chieutruc.info]
 match = -60.0%%
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOoryCff1taKCMv7fDIJjcNa0uUDLrA7vENIruvTmwKolRwt8QN0h
 
 [shopee.vn]
 match = -64.0%%
@@ -184,7 +184,7 @@ url = http://www.chieutretruc.com/2017/12/dia-chi-mua-chieu-truc-cao-son-tai-hcm
 [www.lazada.vn]
 match = -20.0%%
 title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè
-url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-loai-dep-mat-lanh-mua-he-du-tat-ca-cac-kich-thuoc-i2239379152.html
+url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-loai-dep-mat-lanh-mua-he-du-tat-ca-cac-kich-thuoc-i2239379152.html?srsltid=AfmBOoou2igLnJpvd3tRV0r02gD-yHbVGYL00LYKVzzpX0d37M_EZc1R
 
 [www.sendo.vn]
 match = -52.0%%
