--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-30 21:33:41
+lastsearch = 2024-07-31 00:46:54
 
 [www.everonvn.vn]
-match = 80.8%%
-title = Đệm lò xo Everon Pocket Pops
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Pocket-Pops.html
+match = 69.2%%
+title = Đệm lò xo Everon Pocket Premium
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -52,9 +52,9 @@ title = Nệm lò xo Everon Pocket 18
 url = https://www.everonqb.com/nem-lo-xo-everon-pocket-18.html
 
 [tiki.vn]
-match = 34.6%%
-title = Mua Nệm lò xo túi Everon Pocket Pops EDLX
-url = https://tiki.vn/nem-lo-xo-tui-everon-pocket-pops-edlx-p193099163.html?spid=193099165/
+match = 50.0%%
+title = Nệm lò xo túi Everon Pocket Pops EDLX
+url = https://tiki.vn/nem-lo-xo-tui-everon-pocket-pops-edlx-p193099163.html?spid=193099165
 
 [nemgiakho.com]
 match = 50.0%%
@@ -62,8 +62,8 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -34.6%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
+match = -19.2%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
 url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
