--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-30 23:52:29
+lastsearch = 2024-07-31 00:45:50
 
 [sieuthidemonline.vn]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = Đệm lò xo Techwood - thương hiệu Tuấn Anh hàng đầu.
 url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 
 [demxanh.com]
-match = -81.0%%
-title = [Cập nhật] Bảng giá đệm lò xo Tuấn Anh mới nhất 2020
-url = https://demxanh.com/cap-nhat-bang-gia-dem-lo-xo-tuan-anh-moi-nhat-2020.html
+match = -52.4%%
+title = Đệm lò xo 1m6x2m (160x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m6x2m-160x200cm-gia-bao-nhieu.html
 
 [www.diepxuan.com]
 match = 4.8%%
