--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-30 21:46:26
+lastsearch = 2024-07-31 02:29:04
 
 [everon.online]
 match = 50.0%%
@@ -13,8 +13,8 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESM-24016 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esm24016.html
+title = Everon EPM-24060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24060.html
 
 [nem.vn]
 match = 5.9%%
@@ -29,7 +29,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept2408
 [vuanem.com]
 match = 5.9%%
 title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan?srsltid=AfmBOoo-uA6HZnSk73OGDr_eiCWZbIWSqlp23q14o_GKgbXYrg9Erbng
+url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
 
 [everonvn.com.vn]
 match = 32.1%%
