--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-31 00:21:24
+lastsearch = 2024-07-31 02:30:32
 
 [demxanh.com]
 match = -18.5%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 [demre.com.vn]
 match = 66.7%%
 title = chiếu trúc hạt đen- trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội
 url = https://sieuthitretho.vn/chieu-truc-hat-thai-binh-cao-cap-160x200-p498.html
 
 [dem24h.vn]
-match = 51.9%%
-title = Chiếu trúc gập vân gỗ 2 mặt
-url = https://dem24h.vn/chieu-truc-gap-van-go
+match = 29.6%%
+title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
+url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [thegioidemonline.com]
 match = 65.4%%
