--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-31 01:17:50
+lastsearch = 2024-07-31 02:25:01
 
 [www.youtube.com]
 match = -420.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -70.0%%
-title = ren 14 days with you
-url = https://www.tumblr.com/tagged/ren 14 days with you
+match = -400.0%%
+title = What's Ren's and Redacted's personalities like? Since ...
+url = https://www.tumblr.com/14dayswithyou/733219227716190208/whats-rens-and-redacteds-personalities-like
 
 [www.garagejournal.com]
 match = -200.0%%
