--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-31 02:45:47
+lastsearch = 2024-07-31 04:24:16
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 17.4%%
-title = List of cities in Vietnam
-url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
+match = -38.5%%
+title = Ngo Dinh Diem
+url = https://en.wikipedia.org/wiki/Ngo_Dinh_Diem
 
 [books.google.com]
 match = -43.5%%
@@ -327,9 +327,9 @@ title = Việt Nam và ADB
 url = https://www.adb.org/vi/where-we-work/viet-nam
 
 [us.trip.com]
-match = -104.3%%
-title = Best 10 Hotels Closest to Tô Tượng Ánh Kim in Ho Chi Minh City
-url = https://us.trip.com/hotels/ho-chi-minh-city-t-tng-nh-kim/hotels-c301m50945149/
+match = -91.3%%
+title = Hotels near Công viên văn hóa Tân Thới Nhì, Ho Chi Minh City
+url = https://us.trip.com/hotels/ho-chi-minh-city-cng-vin-vn-ha-tn-thi-nh/hotels-c301m29192443/
 
 [en.tripadvisor.com.hk]
 match = -113.0%%
