--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-31 01:21:14
+lastsearch = 2024-07-31 04:16:34
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -152,9 +152,9 @@ title = Hành trình thai giáo 280 ngày by Nguyễn Huy Hoàng
 url = https://issuu.com/huyhoangytn/docs/hs2a_hanh-trinh-thai-giao-280-ngay
 
 [m.facebook.com]
-match = -39.3%%
-title = Chiều nay em co 30kg ghẹ xanh to chăc mẩy ủ đá tươi ngon
-url = https://m.facebook.com/groups/2393083487434360/posts/7839014392841215/
+match = -35.7%%
+title = Hội Ăn Vặt Thuận Giao | Ca nhà ăn gì Ib e ship nha
+url = https://m.facebook.com/groups/351555799862066/posts/1030550318629274/
 
 [dabanhmat.com]
 match = -28.6%%
