--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-07-31 01:44:43
+lastsearch = 2024-07-31 04:23:55
 
 [demxanh.com]
 match = 0.0%%
@@ -13,8 +13,8 @@ url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 0.0%%
-title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hoà
+title = chiếu điều hòa giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa
 
 [demviethome.vn]
 match = 14.8%%
@@ -67,9 +67,9 @@ title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyo
 url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [thegioinem.com]
-match = 7.4%%
-title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
-url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
+match = 33.3%%
+title = 10+ mẫu chiếu điều hoà hot nhất năm
+url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [thegioidemtot.vn]
 match = 0.0%%
