--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-31 02:59:40
+lastsearch = 2024-07-31 04:24:59
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 [demxanh.com]
 match = -87.0%%
 title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html?srsltid=AfmBOoruQme7AkKk_IXg3Rn5RJ3wJtx3neI3olIRO1gbtfTFNr5PNR1q
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -460,4 +460,9 @@ url = https://btmc.vn/
 match = -95.7%%
 title = Xưởng thiết kế mùa hè Xanh 2024 - Sự kết nối của 140 ...
 url = https://www.tapchikientruc.com.vn/tin-tuc/xuong-thiet-ke-mua-he-xanh-2024-ket-noi-cua-140-sinh-vien-tu-6-truong-dai-hoc-trong-nuoc-va-quoc-te.html
+
+[soha.vn]
+match = -26.1%%
+title = Cách làm sạch chiếu trúc không cần dùng nước
+url = https://soha.vn/cach-lam-sach-chieu-truc-khong-can-dung-nuoc-198240730103125475.htm
 
