--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-30 18:15:54
+lastsearch = 2024-07-31 04:19:23
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -12,24 +12,24 @@ title = Đệm PYEODA
 url = https://changagoidemtamhao.com/dem-pyeoda
 
 [demsingapore.com]
-match = -80.0%%
-title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 24
-url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.html
+match = -70.0%%
+title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
+url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -100.0%%
-title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
+match = -80.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
 
 [www.facebook.com]
-match = -75.0%%
-title = Vua Nệm - 🌼 SỞ HỮU BỘ CHĂN GA GẤM CAO CẤP ...
-url = https://www.facebook.com/vuanem.vn/posts/-sở-hữu-bộ-chăn-ga-gấm-cao-cấp-pyeoda-tiết-kiệm-tới-66-vua-nệm-xả-kho-188-39-đồn/1462549323889165/
+match = -80.0%%
+title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ's post
+url = https://www.facebook.com/pyeoda.vn/posts/nệm-lò-xo-bảo-vệ-cột-sống-khỏe-an-vui-đón-tếtmỗi-sáng-thức-dậy-lưng-đau-tinh-thầ/898284118968513/
 
 [shopee.vn]
-match = -70.0%%
-title = bộ chăn ga pyeoda gấm sần giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda gấm sần&urlold=bo-chan-ga-goi-gam-vip-pyeoda/741954123374297332/3385656584626545253/
+match = -25.0%%
+title = Bộ chăn ga Pyeoda Royal Silk tơ tằm
+url = https://shopee.vn/Bộ-chăn-ga-Pyeoda-Royal-Silk-tơ-tằm-i.7585307.12165825412
 
 [tchome.vn]
 match = -10.0%%
