--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-31 01:16:04
+lastsearch = 2024-07-31 04:14:47
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -37.0%%
-title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi
+match = -33.3%%
+title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -39,12 +39,12 @@ url = https://eva.vn/mua-sam-gia-ca/kinh-hoang-ruot-goi-sieu-re-den-ngom-c2a1279
 [shopee.vn]
 match = -22.2%%
 title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
+url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/
 
 [demxanh.com]
-match = -44.4%%
-title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
-url = https://demxanh.com/chan-ga-goi-olympia.html
+match = -11.1%%
+title = [HOT] Top 9 gối nằm mát tốt nhất cho ngày hè
+url = https://demxanh.com/goi-nam-mat-tot-nhat.html
 
 [www.thegioididong.com]
 match = -48.1%%
@@ -188,8 +188,8 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
 match = -44.4%%
-title = Mua tivi Sony giá rẻ chính hãng, giao nhanh, trả góp 0%%
-url = https://dienmaycholon.com/tivi-sony
+title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
+url = https://dienmaycholon.com/goi-vo-goi-simplehome
 
 [metruyen.me]
 match = 33.3%%
@@ -227,9 +227,9 @@ title = Bộ drap giường vỏ gối và bộ chăn ga hàn quốc Tết
 url = http://www.changabluetoday.com/bai-viet/bo-drap-giuong-vo-goi-va-bo-chan-ga-han-quoc-tet/248/
 
 [khodem.vn]
-match = -3.7%%
-title = Bộ chăn ga gối kẻ trắng khách sạn - Kho đệm
-url = https://khodem.vn/bo-chan-ga-goi-ke-trang-khach-san/
+match = -14.8%%
+title = Bộ chăn ga gối lụa Pyeoda Silk Sky - Kho đệm
+url = https://khodem.vn/bo-chan-ga-goi-lua-pyeoda-silk-sky/
 
 [freedomforvietnam.wordpress.com]
 match = -29.6%%
@@ -275,4 +275,14 @@ url = https://znews.vn/tài-khoản-vợ-tin-tuc/trang2.html?type=2
 match = -11.1%%
 title = Thời Bao Gái Xinh Cấp - Angelika Li Jörg
 url = https://angelikalijoerg.de/6940719-bao-gái-xinh-thời-cấp.html
+
+[www.catherinedenoual.com]
+match = 4.8%%
+title = Cặp Vỏ Gối Bella Silk
+url = https://www.catherinedenoual.com/vi/collections/chan-ga-goi/vo-goi/cap-vo-goi-bella-silk/
+
+[flexhouse.vn]
+match = -22.2%%
+title = Bộ chăn ga vỏ gối cotton dệt kim kẻ caro MM2329
+url = https://flexhouse.vn/bo-chan-ga-vo-goi-cotton-det-kim-ke-caro-mm2329
 
